[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/footer.gd" type="Script" id=1]

[node name="Footer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 494.0
margin_bottom = 576.0
size_flags_horizontal = 3
text = "Voltar"

[node name="NextButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 506.0
margin_right = 1000.0
margin_bottom = 576.0
size_flags_horizontal = 3
text = "Avan√ßar"

[connection signal="pressed" from="MarginContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
